--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,10 @@ td, th {
     outline: 0;
 }
 
+tr:nth-child(9){
+    padding-right: 4px;
+}
+
 body:not(.nohover) tbody tr:hover {
     background-color: white;
 }
