--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ tr:nth-child(9){
 }
 
 body:not(.nohover) tbody tr:hover {
-    background-color: white;
+    background-color: black;
 }
 
 td:hover::after, thead th:not(:empty):hover::after, td:focus::after, thead th:not(:empty):focus::after {
@@ -78,7 +78,6 @@ td:focus::after, th:focus::after {
 /* The code box layout */
 
 .codeBox {
-    color: white;
     border: 2px solid rgb(209, 208, 207);
     margin-bottom: 20px;
 }
