--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,3 +85,7 @@ td:focus::after, th:focus::after {
     border: 2px solid rgb(209, 208, 207);
     margin-bottom: 20px;
 }
+
+.OEM{
+    background-color: rgba(130, 250, 250, 0.1);
+}
