--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body{
     background-color: black;
-    color: #aaaaaa
+    color: #aaaaaa;
 }
 
 
@@ -16,8 +16,8 @@ td, th {
 }
 
 /* Separating 8 bytes by a little to make it easier to view/count */
-td:nth-child(9){
-    margin-right: 4px;
+th:nth-child(9){  
+    padding-right: 12px;
 }
 
 
@@ -63,6 +63,7 @@ td:focus::after, th:focus::after {
     transform: translate(-50%, -50%);
     text-align: left;
     z-index: 1;
+    
 }
 
 /* Hover over tooltip to show tooltiptext */
@@ -73,7 +74,7 @@ td:focus::after, th:focus::after {
 
 /* Highlight hovered byte */
 
-.tooltip:hover {
+.tooltip:hover{
     color: white;
     background-color: black;
     height: auto;
@@ -83,9 +84,21 @@ td:focus::after, th:focus::after {
 
 .codeBox {
     border: 2px solid rgb(209, 208, 207);
+    margin: auto;
+    width: 500px;
+    /*max-width: 600px;*/
+    padding: 4px;
     margin-bottom: 20px;
+    
 }
 
-.OEM{
-    background-color: rgba(130, 250, 250, 0.1);
+.tooltip.section{
+    background-color: rgba(130, 250, 250, 0.4);
+    color: green;
+}
+
+
+.bytehighlight{
+    background-color: rgb(95, 208, 50);
+    color: black;
 }
