Added info and classes to every td/span element
Info added, especially first 20 bytes of the sector. Also added two lists with info within the tooltip of the media descriptor.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,8 @@ td, th {
     position: relative;
     outline: 0;
     padding-left: 2px;
+    transition: background-color .6s linear;
+
 }
 
 /* Separating 8 bytes by a little to make it easier to view/count */
@@ -88,6 +90,7 @@ td:focus::after, th:focus::after {
     width: 500px;
     padding: 4px;
     margin-bottom: 20px;
+
 
 }
 
